pkg/provider/kubernetes/ingress/fixtures/Ingress-with-multiple-ingressClasses_ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing
spec:
  ingressClassName: traefik-lb
  rules:
  - http:
      paths:
      - path: /bar
        backend:
          service:
            name: service1
            port:
              number: 80
        pathType: Prefix

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing
spec:
  ingressClassName: traefik-lb2
  rules:
    - http:
        paths:
          - path: /foo
            backend:
              service:
                name: service1
                port:
                  number: 80
            pathType: Prefix
